--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                    <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-         <button onclick="window.location.href='../social links/index.html' ">Visit Site</button>
+         <button onclick="window.location.href='https://johnn-cyber.github.io/Social-links/' ">Visit Site</button>
          </div>
         </div>
     <div class="pro pro2">
@@ -82,7 +82,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-        <button onclick="window.location.href='../contactform/index.html' ">Visit Site</button>
+        <button onclick="window.location.href='https://https://contactform-black.vercel.app/' ">Visit Site</button>
         </div>
     </div>
     <div class="pro pro3">
@@ -140,9 +140,12 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 <section id="contact">
     <h1>Contact Us<span>.</span></h1>
     <p>
-        <a><i class="fa-solid fa-phone"></i></a>
-            <a><i class="fa-solid fa-envelope"></i></a>
-            <a><i class="fa-brands fa-whatsapp"></i></a>
+    <a href="https://github.com/Johnn-cyber" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=100074962647999" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  <a href="mailto:akanijohnpraise@gmail.com"><i class="fas fa-envelope"></i></a>
+  <a href="https://www.linkedin.com/in/akani-johnpraise-97221222b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+  <a href="https://x.com/Booogeeymann?t=eiMcymYNeVHpNqe-dkLdVA&s=09" target="_blank"><i class="fab fa-x-twitter"></i></a>
+  <a href="https://www.instagram.com/boooogeeyman?igsh=MWoyZ29kbDQzY3B5Mg==" target="_blank"><i class="fab fa-instagram"></i></a>
     </p>
 </section>
 </body>
