--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-        <button onclick="window.location.href='https://https://contactform-black.vercel.app/' ">Visit Site</button>
+        <button onclick="window.location.href='https://contactform-black.vercel.app/' ">Visit Site</button>
         </div>
     </div>
     <div class="pro pro3">
@@ -150,3 +150,4 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 </section>
 </body>
 </html>
+
