--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                    <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-         <button onclick="window.location.href='https://johnn-cyber.github.io/Social-links/' ">Visit Site</button>
+         <button onclick="window.location.href='https://socialhub-olive.vercel.app/' ">Visit Site</button>
          </div>
         </div>
     <div class="pro pro2">
@@ -150,4 +150,5 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 </section>
 </body>
 </html>
+
 
