--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Digital FootPrint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="script.js"></script>
     <link href="style.css" rel="stylesheet">
 <body>
     <nav>
-        <a href="#" class="logo">John_</a>
+        <a href="resumee.pdf" target="_blank" class="logo">John_</a>
             <ul>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -150,5 +151,6 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 </section>
 </body>
 </html>
+
 
 
