--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Digital FootPrint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <script src="script.js"></script>
     <link href="style.css" rel="stylesheet">
+    <script src="script.js"></script>
 <body>
     <nav>
-        <a href="resumee.pdf" target="_blank" class="logo">John_</a>
+        <a href="resumee.pdf" class="logo">John_</a>
+        <input type="checkbox" id="sidebar"/>
+        <label for="sidebar" class="hambuger">&#9776;</label>
             <ul>
+                <input type="checkbox" id="cancel"/>
+        <label for="sidebar" class="cancel">x</label>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -70,7 +74,7 @@
                    <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-         <button onclick="window.location.href='https://socialhub-olive.vercel.app/' ">Visit Site</button>
+         <button onclick="window.location.href='https://johnn-cyber.github.io/Social-links/' ">Visit Site</button>
          </div>
         </div>
     <div class="pro pro2">
@@ -83,7 +87,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                 </ul>
-        <button onclick="window.location.href='https://contactform-black.vercel.app/' ">Visit Site</button>
+        <button onclick="window.location.href='http//https://contactform-black.vercel.app/' ">Visit Site</button>
         </div>
     </div>
     <div class="pro pro3">
@@ -151,6 +155,3 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 </section>
 </body>
 </html>
-
-
-
