--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Digital FootPrint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="Footprints.png">
     <script src="script.js"></script>
 <body>
     <nav>
@@ -155,4 +156,5 @@ Alongside coding, I also explore graphics design, which allows me to add creativ
 </section>
 </body>
 </html>
+
 
